# cpp_neural_network

./: # Code Citations.md  README.md  build.bat  build_basic_enhanced.bat  build_clean.bat  build_ml_working.bat  build_simple.bat  chatbot.cpp  chatbot.h  main.cpp  memory.cpp  memory.h  neural_layer.cpp  neural_layer.h  neural_network.cpp  neural_network.h  neuron.cpp  neuron.h
.github/workflows/: codeql.yml
documentation/: chatbot_cpp.txt  chatbot_h.txt  memory_h.txt  neural_layer_cpp.txt  neural_layer_h.txt  neural_network_cpp.txt  neural_network_h.txt  neuron_h.txt
src/: CMakeLists.txt  comprehensive_test.cpp  enhanced_main.cpp  enhanced_neural_network.h  final_test.cpp  main.cpp  ml_working_demo.cpp  neural_network.cpp  neural_network.h  neural_network_impl.cpp  robust_demo.cpp  simple_optimizer_test.cpp  simple_working_demo.cpp  test_adam.cpp  test_adam_fixed.cpp
src/core/: activation.cpp  activation.h  activation_clean.cpp  initializer.h  loss.cpp  loss.h  types.h
src/core/initializer.cpp/optimizer.h               # Base optimizer class/: layer.h                   # Base layer class
src/examples/: mnist.cpp  simple_xor.cpp  xor.cpp
src/layers/: batch_norm_layer.cpp  batch_norm_layer.h  dense_layer.cpp  dense_layer.h  dense_layer_fixed.cpp  dense_layer_fixed.h  dropout_layer.cpp  dropout_layer.h  layer.cpp  layer.h
src/optimizers/: adam.cpp  adam.h  adam_simple.h  advanced_optimizer.h  momentum.cpp  momentum.h  optimizer.cpp  optimizer.h  rmsprop.cpp  rmsprop.h  sgd.cpp  sgd.h  sgd_simple.h
src/test/: test_activation.cpp  test_layers.cpp  test_neural_network.cpp  test_optimizers.cpp
src/utils/: dataset.h  matrix.cpp  matrix.h  metrics.h  random.cpp  random.h
